# rustMedicalAssistant

./: .gitignore  CLAUDE.md  Cargo.toml  FerriScribe-STT-Plan.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml  whisper-server.yml
.remember/tmp/: save-session.pid
crates/agents/: Cargo.toml
crates/agents/src/: lib.rs  orchestrator.rs
crates/agents/src/agents/: chat.rs  compliance.rs  data_extraction.rs  diagnostic.rs  medication.rs  mod.rs  referral.rs  synopsis.rs  workflow.rs
crates/agents/src/tools/: checklist.rs  drug_interaction.rs  icd_lookup.rs  mod.rs  rag_search.rs  vitals_extractor.rs
crates/ai-providers/: Cargo.toml
crates/ai-providers/src/: anthropic.rs  cerebras.rs  gemini.rs  groq.rs  http_client.rs  lib.rs  lmstudio.rs  ollama.rs  openai.rs  openai_compat.rs  sse.rs
crates/audio/: Cargo.toml
crates/audio/src/: capture.rs  convert.rs  device.rs  lib.rs  playback.rs  state.rs  waveform.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/core/src/traits/: agent.rs  ai_provider.rs  exporter.rs  mod.rs  stt_provider.rs  translation.rs  tts_provider.rs
crates/core/src/types/: agent.rs  ai.rs  endpoint.rs  mod.rs  processing.rs  rag.rs  recording.rs  settings.rs  stt.rs  tts.rs  vocabulary.rs
crates/db/: Cargo.toml
crates/db/src/: audit.rs  encryption.rs  graph.rs  lib.rs  migrations.rs  pool.rs  processing_queue.rs  recipients.rs  recordings.rs  search.rs  settings.rs  vectors.rs  vocabulary.rs
crates/db/src/migrations/: m001_initial.rs  m002_rag_tables.rs  m003_vocabulary.rs  mod.rs
crates/db/tests/: encryption.rs
crates/export/: Cargo.toml
crates/export/src/: docx.rs  fhir.rs  lib.rs  pdf.rs
crates/processing/: Cargo.toml
crates/processing/src/: batch.rs  document_generator.rs  lib.rs  pipeline.rs  prompt_resolver.rs  soap_generator.rs  vocabulary_corrector.rs
crates/rag/: Cargo.toml
crates/rag/src/: bm25.rs  embeddings.rs  fusion.rs  graph_search.rs  ingestion.rs  lib.rs  mmr.rs  query_expander.rs  vector_store.rs
crates/security/: Cargo.toml
crates/security/src/: audit_logger.rs  input_sanitizer.rs  key_storage.rs  keychain.rs  lib.rs  machine_id.rs  phi_redactor.rs  rate_limiter.rs
crates/sharing/: Cargo.toml  whisper-manifest.json
crates/sharing/src/: auth_proxy.rs  lib.rs  mdns.rs  orchestrator.rs  pairing.rs  qr.rs  service_installer.rs  tailscale.rs  token_store.rs  whisper_supervisor.rs
crates/sharing/tests/: auth_proxy.rs  orchestrator_e2e.rs  pairing.rs  tailscale_parse.rs  token_store.rs
crates/stt-providers/: Cargo.toml
crates/stt-providers/examples/: transcribe_probe.rs
crates/stt-providers/src/: audio_prep.rs  deepgram.rs  diarization.rs  elevenlabs_stt.rs  failover.rs  groq_whisper.rs  lib.rs  local_provider.rs  merge.rs  models.rs  modulate.rs  remote_provider.rs  whisper.rs  whisper_local.rs
crates/translation/: Cargo.toml
crates/translation/src/: ai_translator.rs  canned_responses.rs  lib.rs  session.rs
crates/tts-providers/: Cargo.toml
crates/tts-providers/src/: elevenlabs_tts.rs  lib.rs  local_tts.rs
docs/runbooks/: sharing-smoke-test.md
docs/superpowers/plans/: 2026-04-05-plan1-foundation.md  2026-04-05-plan2-audio-providers.md  2026-04-05-plan3-intelligence.md  2026-04-06-plan4-tauri-svelte-frontend.md  2026-04-06-plan5-full-feature-wiring.md  2026-04-07-plan6-complete-remaining-stubs.md  2026-04-15-local-stt-migration.md  2026-04-15-streamlined-recording-pipeline.md  2026-04-16-remote-lmstudio-host.md  2026-04-20-custom-context-templates.md  2026-04-20-custom-vocabulary.md  2026-04-21-provider-simplification-and-prompt-editor.md  2026-04-22-agent-and-error-hardening.md  2026-04-22-rsvp-speed-reader.md  2026-04-23-remote-stt-and-ollama.md  2026-04-29-ai-provider-retry.md  2026-04-30-structured-patient-context.md  2026-05-01-v0.10.10-auto-pipeline-patient-context.md  2026-05-01-v0.10.11-split-settings-content.md  2026-05-01-v0.10.7-bug-fixes.md  2026-05-01-v0.10.8-polish.md  2026-05-01-v0.10.9-stt-cancellation.md  2026-05-02-v0.10.12-split-record-tab.md  2026-05-02-v0.10.13-sqlcipher.md  2026-05-02-v0.10.14-lan-pairing.md  2026-05-03-v0.10.15-pairing-gap-closure.md
docs/superpowers/specs/: 2026-04-05-rust-tauri-port-design.md  2026-04-07-plan6-remaining-stubs-design.md  2026-04-15-local-stt-migration-design.md  2026-04-15-streamlined-recording-pipeline-design.md  2026-04-16-remote-lmstudio-host-design.md  2026-04-20-custom-context-templates-design.md  2026-04-20-custom-vocabulary-design.md  2026-04-21-provider-simplification-and-prompt-editor-design.md  2026-04-22-rsvp-speed-reader-design.md  2026-04-23-remote-stt-and-ollama-design.md  2026-04-29-ai-provider-retry-design.md  2026-04-30-structured-patient-context-design.md  2026-05-01-auto-pipeline-patient-context-design.md  2026-05-01-split-settings-content-design.md  2026-05-02-lan-tailscale-pairing-design.md  2026-05-02-split-record-tab-design.md  2026-05-02-sqlcipher-encryption-design.md
scripts/: generate_icon.py
src/: App.svelte  app.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: audio.rs  chat.rs  context_templates.rs  export.rs  generation.rs  logging.rs  mod.rs  models.rs  pipeline.rs  providers.rs  rag.rs  recordings.rs  recovery.rs  settings.rs  sharing.rs  transcription.rs  vocabulary.rs
src/lib/api/: audio.ts  chat.ts  contextTemplates.ts  export.ts  generation.ts  logging.ts  models.ts  pipeline.ts  prompts.ts  recordings.ts  settings.ts  transcription.ts  vocabulary.ts
src/lib/components/: ChatMessage.svelte  ConfirmDialog.svelte  ContextTemplateDialog.svelte  GenerateItem.svelte  Modal.svelte  RecordingCard.svelte  RecordingHeader.svelte  RsvpReader.svelte  RsvpSectionPicker.svelte  SearchBar.svelte  SettingsContent.svelte  Sidebar.svelte  StatusBadge.svelte  StatusBar.svelte  TabBar.svelte  TextEditor.svelte  ToastContainer.svelte  VocabularyDialog.svelte  Waveform.svelte
src/lib/rsvp/: engine.ts  (+1 more)
(+40 files in other folders)
