[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/db",
    "crates/security",
    "crates/audio",
    "crates/ai-providers",
    "crates/stt-providers",
    "crates/tts-providers",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.78"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
futures-core = "0.3"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
eventsource-stream = "0.2"
tokio-stream = "0.1"
bytes = "1"
