[package]
name = "rust-medical-assistant"
version = "0.1.0"
description = "Rust Medical Assistant"
authors = []
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_medical_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }

medical-core = { path = "../crates/core" }
medical-db = { path = "../crates/db" }
medical-security = { path = "../crates/security" }
