[package]
name = "rust-medical-assistant"
version = "0.10.13"
description = "FerriScribe"
authors = []
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_medical_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
serde = { workspace = true }
serde_json = { workspace = true }

chrono = { workspace = true }
dirs = "6"
hound = "3.5"
futures-util = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

medical-core = { path = "../crates/core" }
medical-db = { path = "../crates/db" }
medical-security = { path = "../crates/security" }
medical-audio = { path = "../crates/audio" }
medical-ai-providers = { path = "../crates/ai-providers" }
medical-stt-providers = { path = "../crates/stt-providers" }
medical-tts-providers = { path = "../crates/tts-providers" }
medical-agents = { path = "../crates/agents" }
medical-rag = { path = "../crates/rag" }
medical-processing = { path = "../crates/processing" }
medical-export = { path = "../crates/export" }
medical-translation = { path = "../crates/translation" }
medical-sharing = { path = "../crates/sharing" }
rand = "0.8"
hex = "0.4"
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3"
