[package]
name = "medical-agents"
version.workspace = true
edition.workspace = true

[dependencies]
medical-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = { workspace = true }
async-trait = { workspace = true }
regex = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
