[package]
name = "medical-audio"
version.workspace = true
edition.workspace = true

[dependencies]
medical-core = { path = "../core" }
cpal = "0.15"
rodio = { version = "0.19", default-features = false, features = ["wav", "mp3", "symphonia-all"] }
hound = "3.5"
ringbuf = "0.4"
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
