[package]
name = "medical-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
futures-core = { workspace = true }
tokio = { workspace = true, features = ["sync", "net", "time"] }
tokio-util = { workspace = true }
tracing.workspace = true

[dev-dependencies]
proptest = "1"
