[package]
name = "medical-db"
version.workspace = true
edition.workspace = true

[features]
default = []
graph = ["dep:cozo"]

[dependencies]
medical-core = { path = "../core" }
rusqlite = { version = "0.32", features = ["bundled-sqlcipher", "vtab", "functions"] }
cozo = { version = "0.7", default-features = false, features = ["storage-sled", "rayon"], optional = true }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
bytemuck = { workspace = true }
hex = "0.4"

[dev-dependencies]
tempfile = "3"
proptest = "1"
