[package]
name = "medical-export"
version.workspace = true
edition.workspace = true

[dependencies]
medical-core = { path = "../core" }
printpdf = "0.7"
docx-rs = "0.4"
base64 = "0.22"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
