[package]
name = "medical-rag"
version.workspace = true
edition.workspace = true

[dependencies]
medical-core = { path = "../core" }
medical-db = { path = "../db" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
