[package]
name = "medical-rag"
version.workspace = true
edition.workspace = true

[dependencies]
medical-core = { path = "../core" }
medical-db = { path = "../db" }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
