[package]
name = "medical-security"
version.workspace = true
edition.workspace = true

[dependencies]
medical-core = { path = "../core" }
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
hmac = "0.12"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
rand = "0.8"
base64 = "0.22"
regex = "1"
lazy_static = "1"
machine-uid = "0.5"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
proptest = "1"
