[package]
name = "medical-sharing"
version.workspace = true
edition.workspace = true

[dependencies]
medical-core = { path = "../core" }
medical-security = { path = "../security" }
axum = { version = "0.7", features = ["macros"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }
hyper = "1"
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio"] }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
urlencoding = "2"
mdns-sd = "0.13"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
dirs = "5"
hostname = "0.4"
zip = "2"
flate2 = "1"
tar = "0.4"
futures-util = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
