[package]
name = "medical-stt-providers"
version.workspace = true
edition.workspace = true

[dependencies]
medical-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures-core = { workspace = true }
reqwest = { workspace = true }
tokio-stream = "0.1"
# Local STT
whisper-rs = "0.16"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["ndarray", "download-binaries", "std", "tls-native"] }
ndarray = "0.17"
knf-rs = "0.3.2"
eyre = "0.6.12"

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16", features = ["metal"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
